# gen-zsh-docset

./: .gitignore  .gitmodules  README.md  gen-zsh-docset  pyproject.toml
.devcontainer/: devcontainer.json
src/gen_zsh_docset/: main.py
